# song-popularity

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/prompts/: 1_modeling.txt  2_debugging.txt  3_optimization.txt  4_feature_engineering.txt  5_experimentation.txt
__marimo__/session/: new.py.json
data/: data-unziper.py  data-unzipper.py
notebooks/: 01_eda.ipynb  01_eda.py  02_feature_engineering.py  03_modeling.py  04_new_data_testing.py
source/: __init__.py
source/eda/: __init__.py  plot.py
source/features/: optuna.py
source/model-creation/: baseline.py  optuna.py
source/modeling/: __init__.py  optuna.py  params.py
source/utils/: plot.py
src/utils/: plot.py
