[project]
name = "rock-or-pop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "auto-mix-prep>=0.2.0",
    "catboost>=1.2.10",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "marimo>=0.23.6",
    "matplotlib>=3.10.9",
    "mlflow>=3",
    "numpy>=2.4.6",
    "optuna>=4.8.0",
    "pandas>=2.3.0,<3",
    "pandas-stubs>=2.2.0.20241218",
    "pydantic>=2.13.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "torch>=2.12.0",
    "uvicorn>=0.47.0",
    "xgboost>=3.2.0",
    "shap>=0.47.0",
    "numba>=0.59.0",
]
